# saxon-rs

./: .gitignore  Cargo.toml  README.md  download_saxonc.sh
saxonrs/: Cargo.toml
saxonrs-app/: Cargo.toml
saxonrs-app/src/: main.rs
saxonrs-sys/: Cargo.toml  build.rs  wrapper.h
saxonrs-sys/src/: lib.rs
saxonrs/src/: lib copy.rs  lib.rs
