[package]
name = "saxonrs-sys"
version = "0.1.0"
edition = "2024"
authors = ["Nicolás Martino <nicomartino1@gmail.com>"]

[dependencies]
cxx = "1.0.150"
autocxx = "0.30.0"

[build-dependencies]
autocxx-build = "0.30.0"    
cc = "1.2.17"
miette = { version = "5", features = ["fancy"] } 
cfg-if = "1.0.0"



[features]
default = ["saxon-he"]

# Saxon Home Edition
saxon-he = []

# Saxon Professional Edition
saxon-pe = []

# Saxon Enterprice Edition
saxon-ee = []